Fix: Correções sistema de fotos de perfil e criação de usuários
 Corrigido APIService.users.create undefined
- app.js não sobrescreve mais window.APIService completamente
- Verificação de existência antes de adicionar métodos

 Corrigido atualização de navbar após upload de foto
- Adicionada chamada loadUserProfilePhoto() em perfil.html
- Melhorado updateUserHeader() em user-profile.js
- Sincronização localStorage entre páginas

 Iniciado correção página de vendas
- Corrigida URL de construção da imagem
- Adicionados logs de debug detalhados
- Usar APIService.baseURL em vez de API_BASE_URL

 Debug logs adicionados:
- config.js: Verificação APIService.users.create
- usuarios.html: Debug antes de criar usuário
- vendas.html: Debug carregamento de foto

 Arquivos alterados:
- frontend/js/app.js
- frontend/js/config.js
- frontend/js/user-profile.js
- frontend/pages/perfil.html
- frontend/pages/usuarios.html
- frontend/pages/vendas.html

--- a/frontend/pages/usuarios.html
+++ b/frontend/pages/usuarios.html
@@ -813,6 +813,18 @@
             };
 
             try {
+                // Debug para verificar APIService
+                console.log('🔍 Verificando APIService:', {
+                    'window.APIService existe': typeof window.APIService,
+                    'APIService existe': typeof APIService,
+                    'APIService.users existe': typeof APIService?.users,
+                    'APIService.users.create existe': typeof APIService?.users?.create
+                });
+
+                if (!APIService?.users?.create) {
+                    throw new Error('APIService.users.create não está disponível. Verifique se config.js foi carregado corretamente.');
+                }
+
                 // Usar APIService para criar usuário
                 const result = await APIService.users.create(userData);
                 
