fix: corrige URL duplicada para imagens de perfil
- Remove '/uploads/' duplicado na construção da URL
- Corrige carregamento de fotos de perfil na página de vendas
- Backend já retorna 'uploads/profiles/filename.jpg' completo

--- a/frontend/pages/vendas.html
+++ b/frontend/pages/vendas.html
@@ -2389,7 +2389,7 @@
             if (usuario.profilePhotoPath) {
                 const avatarImage = document.getElementById('userAvatarImage');
                 const avatarPlaceholder = document.getElementById('userAvatarPlaceholder');
-                const photoUrl = `${API_BASE_URL.replace('/api', '')}/uploads/${usuario.profilePhotoPath}`;
+                const photoUrl = `${API_BASE_URL.replace('/api', '')}/${usuario.profilePhotoPath}`;
                 
                 avatarImage.src = photoUrl;
                 avatarImage.style.display = 'block';
