--- a/frontend/pages/dashboard.html
+++ b/frontend/pages/dashboard.html
@@ -133,10 +133,10 @@
         <div style="position: relative; max-width: 1200px; margin: 0 auto; height: 100%; display: flex; flex-direction: column; justify-content: center; padding: 0 2rem; z-index: 10;">
             <div style="max-width: 700px;">
                 <h1 style="margin: 0 0 1rem 0; font-size: 3rem; font-weight: 700; color: white; line-height: 1.2; text-shadow: 0 2px 10px rgba(0,0,0,0.5);">
-                    Planeje, execute, evolua
+                    Estruture, realize, cresça
                 </h1>
                 <p style="margin: 0 0 2rem 0; font-size: 1.25rem; color: rgba(255, 255, 255, 0.95); font-weight: 400; line-height: 1.6;">
-                    Busque abaixo a ferramenta perfeita para o seu trabalho
+                    Busque a ferramenta perfeita para o seu trabalho
                 </p>
                 <div style="display: flex; gap: 1rem; flex-wrap: wrap;">
                     <button onclick="window.location.href='clientes.html'" style="background: #f59e0b; color: #000000; border: none; padding: 1rem 2rem; cursor: pointer; font-size: 1rem; font-weight: 600; border-radius: 8px; display: flex; align-items: center; gap: 0.75rem; transition: all 0.3s; box-shadow: 0 4px 12px rgba(245, 158, 11, 0.4);" onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 6px 16px rgba(245, 158, 11, 0.5)'" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(245, 158, 11, 0.4)'">
